--- a/OrderManagementAPI.csproj
+++ b/OrderManagementAPI.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Tests\CreateOrderCommandHandler.UnitTests.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Tests\CreateOrderCommandHandler.UnitTests.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
